<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="768dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/_7_11"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginEnd="26dp"
            android:background="#00ff00"
            android:text="@string/_0_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="76dp"
            android:background="#ff0000"
            android:text="@string/_30s"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="223dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="193dp"
                android:layout_height="151dp"
                android:background="#0000ff"
                android:text="@string/_29"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="193dp"
                android:layout_height="146dp"
                android:background="#808080"
                android:text="@string/_25"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="192dp"
                android:layout_height="153dp"
                android:background="#00ff00"
                android:text="@string/_39"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="189dp"
                android:layout_height="146dp"
                android:background="#ffff00"
                android:text="@string/_18"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="0" />

        </android.support.v7.widget.GridLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>