<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/usg"
    tools:context=".ScoreBoard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="136dp"
            android:layout_height="49dp"
            android:layout_centerInParent="true"
            android:text="@string/textview"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="169dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="143dp"
            android:paddingLeft="10dp"
            android:text="@string/your_score_is"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/button7"
            android:layout_alignParentTop="true"
            android:layout_marginTop="69dp"
            android:paddingLeft="30dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="112dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/button7"
            android:layout_marginStart="32dp"
            android:text="@string/start"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="32dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="155dp"
            android:layout_height="63dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="62dp"
            android:text="@string/high_score"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="62dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>